# flexify_analysis

./: .gitignore  README.md  main.py  pyproject.toml
config/: paths.yaml
notebooks/: gym_sets_eda.ipynb
src/: config.py  fetch_data.py  fetch_gym_sets.py
